cmake_minimum_required(VERSION 3.0)
project(ims)
enable_language(CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENTIONS OFF)
find_package(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS})
find_package(OpenSSL REQUIRED)
include_directories(${OPENSSL_INCLUDE_DIR})
add_executable(ims Boards.cpp Game.cpp Graphic.cpp main.cpp net.cpp)
target_link_libraries(ims ${SDL2_LIBRARIES} pthread OpenSSL::SSL OpenSSL::Crypto)
